Import common libraries and load dataset

--- a/FOXTROT_2_ASSIGNMENT_2.ipynb
+++ b/FOXTROT_2_ASSIGNMENT_2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORnngQHdkr0oGKdBHEfECk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +26,92 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Case Study – Banking & Loans in Ghana"
+      ],
       "metadata": {
-        "id": "eoS08Iesy507"
+        "id": "FbLcenz9NvHz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In today’s competitive and digitally driven financial environment, the ability to predict credit risk is a strategic advantage. GhanaLoanConnect, a digital lending platform connecting borrowers to investors, is actively seeking data-driven solutions to reduce its rate of non-performing loans (NPLs). Rising default rates not only impact profitability but also weaken lender trust and reduce platform credibility\n",
+        "\n",
+        "To address this challenge, this project proposes the development of a machine learning model that can predict the likelihood of a borrower defaulting on a loan. With accurate predictions, GhanaLoanConnect can proactively minimize risk, prioritize low-risk borrowers, and enhance portfolio performance."
+      ],
+      "metadata": {
+        "id": "NXuKY4piN7F3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Import common libraries"
+      ],
+      "metadata": {
+        "id": "W-ri_NtwOIeH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to handle the data\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# to visualize the data\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# To preprocess the data\n",
+        "from sklearn.preprocessing import StandardScaler, MinMaxScaler, LabelEncoder,OneHotEncoder\n",
+        "\n",
+        "# machine learning libraries\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score\n",
+        "\n",
+        "# for classification tasks\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "# metrics\n",
+        "from sklearn.metrics import (accuracy_score, precision_score, recall_score,\n",
+        "                             f1_score, roc_auc_score, confusion_matrix,\n",
+        "                             classification_report)\n",
+        "\n",
+        "#ignore warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
+      ],
+      "metadata": {
+        "id": "vDNfYXc-OWeH"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Load dataset"
+      ],
+      "metadata": {
+        "id": "LlJRCAoDOy6Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv('/content/loan_borowwer_data.csv')"
+      ],
+      "metadata": {
+        "id": "szCCiK2UH970"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
