Remove unnecessary libraries from import

--- a/FOXTROT_2_ASSIGNMENT_2.ipynb
+++ b/FOXTROT_2_ASSIGNMENT_2.ipynb
@@ -75,8 +75,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.svm import SVC\n",
+        "\n",
         "\n",
         "# metrics\n",
         "from sklearn.metrics import (accuracy_score, precision_score, recall_score,\n",
@@ -90,7 +89,7 @@
       "metadata": {
         "id": "vDNfYXc-OWeH"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +115,7 @@
           "height": 443
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +670,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Describe Data\n"
+        "# Exploratory Data Analysis\n"
       ],
       "metadata": {
         "id": "qtM0RklxtrSC"
@@ -680,7 +679,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data.describe()"
+        "data.info()"
       ],
       "metadata": {
         "id": "Dmo7yrEKtx5o",
@@ -690,7 +689,7 @@
           "height": 320
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
