Add final touches

--- a/Group 4 (FOXTROT-2) Project One.ipynb
+++ b/Group 4 (FOXTROT-2) Project One.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +27,26 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!dpkg --configure -a > /dev/null 2>&1\n",
+        "!apt-get install -y texlive-xetex texlive-fonts-recommended texlive-latex-extra > /dev/null 2>&1\n",
+        "\n",
+        "!apt-get install pandoc > /dev/null 2>&1\n",
+        "\n",
+        "# Add --output option to specify the output file name and location explicitly\n",
+        "!jupyter nbconvert --to pdf --output \"Group 4 (FOXTROT-2) Project One.pdf\" \"/content/Group 4 (FOXTROT-2) Project One.ipynb\"\n",
+        "\n",
+        "from google.colab import files\n",
+        "files.download('Group 4 (FOXTROT-2) Project One.pdf')"
+      ],
+      "metadata": {
+        "id": "plr881p4a-k2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Case Study – Banking & Loans in Ghana"
@@ -43,6 +64,15 @@
       ],
       "metadata": {
         "id": "NXuKY4piN7F3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Import Common Libraries"
+      ],
+      "metadata": {
+        "id": "tKrmFJHZb9Wz"
       }
     },
     {
@@ -94,7 +124,7 @@
         "id": "973GJDqkmbWc",
         "outputId": "d2d3e81e-d746-47e4-e56b-61dff4d21892"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,6 +185,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Load Dataset"
+      ],
+      "metadata": {
+        "id": "O7OI3u8ycHay"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Load dataset\n",
@@ -171,7 +210,7 @@
         "id": "qJ9QlZnBmivu",
         "outputId": "15581b11-d983-4999-d784-1896efe5025f"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -927,10 +966,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Import common libraries"
+        "## Exploratory Data Analysis"
       ],
       "metadata": {
-        "id": "W-ri_NtwOIeH"
+        "id": "dzbVkWoXcVIr"
       }
     },
     {
@@ -945,7 +984,7 @@
       "metadata": {
         "id": "9nsXogGEmm25"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1087,7 @@
         "id": "pCxVygyDnw1-",
         "outputId": "9ce426cb-9ef2-450c-8fc4-d4458d33fa9d"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,6 +1262,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preprocessing and Feature Engineering"
+      ],
+      "metadata": {
+        "id": "fTrCTX76cebT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Data Preprocessing\n",
@@ -1259,8 +1307,17 @@
       "metadata": {
         "id": "ZaZ6BltEpQ3c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model Training and Evaluation"
+      ],
+      "metadata": {
+        "id": "jGPSMAGyc2Ir"
+      }
     },
     {
       "cell_type": "code",
@@ -1368,7 +1425,7 @@
         "id": "eIn_MXVBq7Pq",
         "outputId": "b75e2373-624f-4b31-dfcd-0040abb8057c"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1935,6 +1992,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Fairness Analysis"
+      ],
+      "metadata": {
+        "id": "dcAWTAirdATa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Fairness Analysis\n",
@@ -2032,7 +2098,7 @@
         "id": "cezSVkxjujOz",
         "outputId": "c1ed2436-4206-42cd-e633-203ad922d25f"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2640,7 +2706,7 @@
         "id": "KNT65VE50AWx",
         "outputId": "9afdbb16-15ed-4190-b1c6-e43fbdf5f59e"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
