Add final touches 2

--- a/Group 4 (FOXTROT-2) Project One.ipynb
+++ b/Group 4 (FOXTROT-2) Project One.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +34,7 @@
         "!apt-get install pandoc > /dev/null 2>&1\n",
         "\n",
         "# Add --output option to specify the output file name and location explicitly\n",
-        "!jupyter nbconvert --to pdf --output \"Group 4 (FOXTROT-2) Project One.pdf\" \"/content/Group 4 (FOXTROT-2) Project One.ipynb\"\n",
+        "!jupyter nbconvert --to pdf --output \"Group 4 (FOXTROT-2) Project One.pdf\" \"/content/Group_4_(FOXTROT_2)_Project_One.ipynb\"\n",
         "\n",
         "from google.colab import files\n",
         "files.download('Group 4 (FOXTROT-2) Project One.pdf')"
