--- a/Group 4 (FOXTROT-2) Project One.ipynb
+++ b/Group 4 (FOXTROT-2) Project One.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +38,99 @@
         "!jupyter nbconvert --to pdf --output \"Group 4 (FOXTROT-2) Project One.pdf\" \"/content/Group_4_(FOXTROT_2)_Project_One.ipynb\"\n",
         "\n",
         "from google.colab import files\n",
-        "files.download('Group 4 (FOXTROT-2) Project One.pdf')"
+        "files.download('Group 4 (FOXTROT-2) Project One.pdf')\n"
       ],
       "metadata": {
-        "id": "plr881p4a-k2"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "id": "MFgIJ5RAlKKl",
+        "outputId": "15017abd-bee6-40ec-ce37-849e1ddd18de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[NbConvertApp] Converting notebook /content/Group_4_(FOXTROT_2)_Project_One.ipynb to pdf\n",
+            "[NbConvertApp] Support files will be in Group 4 (FOXTROT-2) Project One_files/\n",
+            "[NbConvertApp] Making directory ./Group 4 (FOXTROT-2) Project One_files\n",
+            "[NbConvertApp] Writing 111861 bytes to notebook.tex\n",
+            "[NbConvertApp] Building PDF\n",
+            "[NbConvertApp] Running xelatex 3 times: ['xelatex', 'notebook.tex', '-quiet']\n",
+            "[NbConvertApp] Running bibtex 1 time: ['bibtex', 'notebook']\n",
+            "[NbConvertApp] WARNING | bibtex had problems, most likely because there were no citations\n",
+            "[NbConvertApp] PDF successfully created\n",
+            "[NbConvertApp] Writing 755734 bytes to /content/Group 4 (FOXTROT-2) Project One.pdf\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_b733997f-7b92-4a66-8a89-dcdea82c66b6\", \"Group 4 (FOXTROT-2) Project One.pdf\", 755734)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
