--- a/Foxtrot_2_Final_project.ipynb
+++ b/Foxtrot_2_Final_project.ipynb
@@ -1762,11 +1762,25 @@
         "print(undersampled_data['Is_Fraud'].value_counts())"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "9JlMPeFzPQmk",
-        "collapsed": true
+        "outputId": "ff14bf99-7745-4048-cee9-f3ffcbbf9ced"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Is_Fraud\n",
+            "0    10100\n",
+            "1    10088\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1793,19 +1807,33 @@
         "print(\"Shape of y_test:\", y_test.shape)"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "e__gysy_PDMM",
-        "collapsed": true
+        "outputId": "cc1ef3b8-ff52-43a5-f920-5755407586f6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of X_train: (16150, 23)\n",
+            "Shape of X_test: (4038, 23)\n",
+            "Shape of y_train: (16150,)\n",
+            "Shape of y_test: (4038,)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Feature Engineering,"
+        "Feature Engineering"
       ],
       "metadata": {
-        "id": "JqwGRXtBHs5F"
+        "id": "laxIlvQ3NxzO"
       }
     },
     {
